cmake_minimum_required(VERSION 3.17)
project(C-Course)

set(CMAKE_CXX_STANDARD 14)
add_executable(FirstProgram FirstProgram.cpp)
add_executable(InputOutput InputOutput.cpp)
add_executable(Variables AreaRoom.cpp)
add_executable(PrimitiveTypes PrimitiveTypes.cpp)
add_executable(SizeOfOperator SizeOfOperator.cpp)
add_executable(Constants Constants.cpp)
add_executable(Arrays Arrays.cpp)
add_executable(Vectors Vectors.cpp)
add_executable(VectorsChallenge VectorsChallenge.cpp)
add_executable(ArithmeticOperations ArithmeticOperators.cpp)
add_executable(IncrementDecrementOperators IncrementDecrementOperators.cpp)
add_executable(MixedExpressions MixedExpressions.cpp)
add_executable(EqualityOperators EqualityOperators.cpp)
add_executable(LogicalOperators LogicalOperators.cpp)
add_executable(OperatorsChallenge OperatorsChallenge.cpp)
add_executable(IfStatement IfStatement.cpp)
add_executable(IfElseStatement IfElseStatement.cpp)
add_executable(SwitchStatement SwitchStatement.cpp)
add_executable(SwitchStatementEnum SwitchStatementEnum.cpp)
add_executable(ConditionalOperator ConditionalOperator.cpp)
add_executable(Loops Loops.cpp)
add_executable(LoopsChallenge LoopsChallenge.cpp)